deploy: b2183126911f9925bbcc59b8863eb776506785a0

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         </header>
         <figure class="on-the-left-side" style="margin-top: 10px; margin-right: 40px; margin-bottom: 10px; margin-left: 10px;"><img src="/uploads/2023/Neukamm_Summary_Figure_1.jpg" alt="Birdlike dinosaur" />
 </figure>
+<p><i>What follows is a summary of a longer article <a href="https://www.ag-evolutionsbiologie.net/pdf/2023/evolution-why-birds-are-living-dinosaurs.pdf">Why do we know that birds are living dinosaurs?</a> published (in English) by AG Evolutionsbiologie, a German scientific association that deals with evolutionary biology and creationism.</i></p>
 <p><strong>Summary</strong></p>
 <p>The finding that birds are descendants of certain dinosaurs has been a scientific consensus for over 20 years. Only a very few experts still question it. In the publications of those who deny macroevolution and want to have it replaced by an “intelligent” origin (that is, creationists of various stripes), such criticism is clearly overrepresented. However, unlike the scientists they cite, creationists do not primarily cast doubt on the membership of birds in particular archosaur taxa. Rather, they want to see the evolutionary development as such questioned. They achieve this only by mixing the criticism of individual scientists with antiquated and factually incorrect ideas on evolution.</p>
 
