deploy: 612a30aeee6a5e394bd4729e888a44fc1fd3b136

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </header>
         <figure>
 <img src="/uploads/2023/P1010992_Whistling_Duck_600.jpg" alt="Black-bellied whistling duck" />
-<figcaption><a href="https://www.allaboutbirds.org/guide/Black-bellied_Whistling-Duck/overview"><i>Dendrocygna autumnalis</i> </a> – black-bellied whistling duck, Boulder, Colorado, December, 2023. According to the range map in the link, these ducks are found almost entirely south of the US. In Central America, they are found primarily along the coasts. The link says that they expanding northward into several southern states. Colorado seems a long way off (not to mention that it is cold and not exactly coastal). The lighting was poor (and flat), but I managed to get some pictures at ISO 1250, a number which would have been almost unheard of not so very long ago. The bird sat placidly posing for photographs, but was gone the next day. Thanks to Paul Strode for the identification.
+<figcaption><a href="https://www.allaboutbirds.org/guide/Black-bellied_Whistling-Duck/overview"><i>Dendrocygna autumnalis</i> </a> – black-bellied whistling duck, Boulder, Colorado, December, 2023. According to the range map in the link, these ducks are found almost entirely south of the US. In Central America, they are found primarily along the coasts. The link says that they are expanding northward into several southern states. Colorado seems a long way off (not to mention that it is cold and not exactly coastal). The lighting was poor (and flat), but I managed to get some pictures at ISO 1250, a number which would have been almost unheard of not so very long ago. The bird sat placidly posing for photographs, but was gone the next day. Thanks to Paul Strode for the identification.
 </figcaption>
 </figure>
 
